--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "text_values = [cities]\n",
+    "text_values = [cities[0][C]]\n",
     "print(text_values)\n",
     "#bar_trace_first_three_pops = {'type': 'bar', 'x':[x_values], 'y':[y_values], 'text': text_values}"
    ]
