--- a/index.ipynb
+++ b/index.ipynb
@@ -293,23 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-8b2cb9c64ff3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#bar_trace_first_three_pops = {'type': 'bar', 'x':[x_values], 'y':[y_values], 'text': text_values}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'keys'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Buenos Aires', 'Toronto', 'Pyeongchang']\n"
      ]
     }
    ],
    "source": [
-    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['C']]\n",
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "print(text_values)\n",
     "#bar_trace_first_three_pops = {'type': 'bar', 'x':[x_values], 'y':[y_values], 'text': text_values}"
    ]
