Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "print(text_values)\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x':[x_values], 'y':y_values , 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values , 'y': y_values , 'text': text_values}"
    ]
   },
   {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -346,30 +346,26 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "04810766-881c-11e9-9716-c1216234fcf3",
+         "uid": "215744fe-881c-11e9-9716-c1216234fcf3",
          "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "y": [
-          [
-           2891000,
-           2800000,
-           2581000
-          ]
+          2891000,
+          2800000,
+          2581000
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"0279823e-efe8-4e7d-858c-5b2a9696c714\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0279823e-efe8-4e7d-858c-5b2a9696c714\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"0487614c-881c-11e9-9716-c1216234fcf3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"6a53a0c9-683d-4d07-891f-513129978248\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6a53a0c9-683d-4d07-891f-513129978248\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"2166e5da-881c-11e9-9716-c1216234fcf3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"0279823e-efe8-4e7d-858c-5b2a9696c714\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0279823e-efe8-4e7d-858c-5b2a9696c714\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"0487614c-881c-11e9-9716-c1216234fcf3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"6a53a0c9-683d-4d07-891f-513129978248\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6a53a0c9-683d-4d07-891f-513129978248\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"2166e5da-881c-11e9-9716-c1216234fcf3\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
