Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,8 +396,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_vlau, 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': , 'y': , 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities[0]"
    ]
   },
   {
