--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[0]"
+    "[cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]"
    ]
   },
   {
