--- a/index.ipynb
+++ b/index.ipynb
@@ -402,11 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]"
+    "x_values2 = [cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]"
    ]
   },
   {
