Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values2 = [cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]"
+    "x_values2 = [cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]\n",
+    "print x_values2\n",
+    "print(x_values2)\n"
    ]
   },
   {
