Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -406,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values2 = [cities[0]['City'], cities[1]['City'], cities[0]['City']]\n",
+    "x_values2 = [cities[0]['Area'], cities[1]['Area'], cities[0]['Area']]\n",
     "print x_values2\n",
     "print(x_values2)\n"
    ]
