Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,21 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Buenos Aires', 'Toronto', 'Pyeongchang']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_values2 = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "\n",
-    "y_values2 = []\n"
+    "y_values2 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "print y_values"
    ]
   },
   {
