--- a/index.ipynb
+++ b/index.ipynb
@@ -397,19 +397,26 @@
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': , 'y': , 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values2, 'y': y_values2, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4758, 2731571, 3194]\n"
+     ]
+    }
+   ],
    "source": [
     "x_values2 = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "\n",
-    "y_values2 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "print y_values"
+    "y_values2 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n"
    ]
   },
   {
